semantic/src/test_cases/bad/test3.cl
(* No main() method *)

class A {
    a : Int;
};

class Main {
    f() : Int {
        0
    };
};
